# stellcoilbench

./: .gitattributes  .gitconfig.local  .gitignore  .readthedocs.yaml  LICENSE  README.md  WORKFLOW.md  pyproject.toml  pyrightconfig.json  pytest.ini  test_ci_logic.sh  test_leaderboard.sh
.github/workflows/: ci.yml  update-db.yml
cases/: README.md  advanced_LandremanPaulQA.yaml  base_rotating_ellipse.yaml  base_tokamak.yaml  basic_CFQS.yaml  basic_HSX.yaml  basic_LandremanPaulQA.yaml  basic_MUSE.yaml  basic_NCSX.yaml  basic_W7X.yaml  basic_rotating_ellipse.yaml  basic_tokamak.yaml  case.yaml  expert_LandremanPaulQA.yaml  expert_W7X.yaml
db/: cases.json  leaderboard.json  methods.json
docs/: api.rst  cases.rst  cli.rst  conf.py  getting_started.rst  index.md  index.rst  leaderboard.json  leaderboard.md  leaderboard.rst  leaderboards.md  overview.rst  requirements.txt  submissions.rst  surfaces.md
docs/_static/: custom.css
docs/leaderboards/: HSX_QHS_mn1824_ns101.md  LandremanPaul2021_QA.md  W7-X_without_coil_ripple_beta0p05_d23p4_tm.md  c09r00_B_axis_half_tesla_PM4Stell_focus.md  cfqs_2b40.md  circular_tokamak.md  dev_test_akaptano.md  muse_focus.md  rotating_ellipse.md
docs/surfaces/: LandremanPaul2021_QA.md  circular_tokamak.md  input_LandremanPaul2021_QA.md  input_circular_tokamak.md  input_muse.md  input_rotating_ellipse.md  (+2 more)
plasma_surfaces/: input.HSX_QHS_mn1824_ns101  input.W7-X_without_coil_ripple_beta0p05_d23p4_tm
scripts/: git-pull-safe.sh  run_ruff.sh
src/: biotsavart.py  cli.py  coil_optimization.py  config_scheme.py  evaluate.py  geometry.py  metrics.py
submissions/: README.md
tests/: README.md  __init__.py  conftest.py  debug_leaderboard.py  test_advanced_landreman_paul_continuation.py  test_algorithm_options.py  test_case_filter.py  test_cli.py  test_cli_comprehensive.py  test_coil_initialization_comprehensive.py  test_coil_objective_options.py  test_coil_optimization.py  test_coil_optimization_comprehensive.py  test_coil_optimization_edge_cases.py  test_config_scheme.py  test_constraint_scaling.py  test_evaluate.py  test_evaluate_comprehensive.py  test_fourier_continuation.py  test_leaderboard_integration.py  test_linear_penalty.py  test_linear_penalty_comprehensive.py  test_new_plasma_surfaces.py  test_post_processing.py  test_post_processing_comprehensive.py  test_scipy_algorithms.py  test_update_db.py  test_update_db_comprehensive.py  test_update_db_helpers.py  test_validate_config.py  test_weight_scaling.py
(+171 files in other folders)
