[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stellcoilbench"]

[project]
name = "stellcoilbench"
version = "0.1.0"
description = "Benchmark suite for stellarator coil optimization algorithms."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Alan Kaptanoglu", email = "alanakaptanoglu@gmail.com"}
]

dependencies = [
    "numpy>=1.24",
    "typer[all]>=0.9",
    "PyYAML>=6.0",
    "pandas",
    "pytest",
    "black",
    "ruff",
    "psutil",
    "simsopt @ git+https://github.com/PedroFranciscoGil/simsopt.git@auglag_coils",
]

[project.scripts]
stellcoilbench = "stellcoilbench.cli:main"

